# photogoodyzer

./: .clang-format  .gitignore  CMakeLists.txt  PhotoGoodyzerConfig.cmake.in  README.md
CMakeModules/: FindFFTW3.cmake
include/: PhotoGoodyzer.h
include/PhotoGoodyzer/: Array.h  ArrayBase.h  Channel.h  ColorSpace.h  Image.h  ops.h  sRGBvLinRGB.h
src/: CMakeLists.txt
src/pgcli/: CMakeLists.txt  pgcli.cpp
src/pggui/: CMakeLists.txt  ImageDrawWidget.cpp  ImageDrawWidget.h  MainWindow.cpp  MainWindow.h  mainwindow.ui  pggui.cpp
src/pggui/resources/: about.html  icon.icns  icon.qrc  icon.rc
src/pglib/: ArrayBase.cpp  CMakeLists.txt  Equalizer.h  FFT.cpp  FFT.h  Illuminant.h  Image.cpp  ImgExpr.h  TransferMatrix.cpp  TransferMatrix.h  XYZvLab.h  ops.cpp  sRGBvLinRGB.cpp
tests/: CMakeLists.txt  tests.cpp  tests.h
